// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should have diferrent themes 1`] = `
.c0 {
  position: relative;
  z-index: 0;
  padding: 15px;
  min-height: 55px;
  -webkit-transition: 0.3s ease-out;
  transition: 0.3s ease-out;
  border-radius: 10px;
  font-size: 18px;
  color: white;
}

.c0::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 10px;
  -webkit-transition: 0.3s ease-out;
  transition: 0.3s ease-out;
}

.c0::after {
  content: '';
  position: absolute;
  z-index: -2;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 10px;
  -webkit-transition: 0.3s ease-out;
  transition: 0.3s ease-out;
}

.c0:hover:not([disabled]) {
  -webkit-transform: translate(-3px,-3px);
  -ms-transform: translate(-3px,-3px);
  transform: translate(-3px,-3px);
}

.c0:hover:not([disabled])::after {
  -webkit-transform: translate(5px,5px);
  -ms-transform: translate(5px,5px);
  transform: translate(5px,5px);
}

.c0:disabled {
  color: var( --gray8 );
}

.c0:disabled::before {
  background: var(--gray);
}

.c0::before {
  background: var(--violet);
}

.c0::after {
  border: 1px solid var(--violet);
  background: var(--red);
}

<button
  class="c0"
  type="button"
/>
`;

exports[`Button should have diferrent themes 2`] = `
.c0 {
  position: relative;
  z-index: 0;
  padding: 15px;
  min-height: 55px;
  -webkit-transition: 0.3s ease-out;
  transition: 0.3s ease-out;
  border-radius: 10px;
  font-size: 18px;
  color: var(--violet);
}

.c0::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 10px;
  -webkit-transition: 0.3s ease-out;
  transition: 0.3s ease-out;
}

.c0::after {
  content: '';
  position: absolute;
  z-index: -2;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 10px;
  -webkit-transition: 0.3s ease-out;
  transition: 0.3s ease-out;
}

.c0:hover:not([disabled]) {
  -webkit-transform: translate(-3px,-3px);
  -ms-transform: translate(-3px,-3px);
  transform: translate(-3px,-3px);
}

.c0:hover:not([disabled])::after {
  -webkit-transform: translate(5px,5px);
  -ms-transform: translate(5px,5px);
  transform: translate(5px,5px);
}

.c0:disabled {
  color: var( --gray8 );
}

.c0:disabled::before {
  background: var(--gray);
}

.c0::before {
  background: var(--violet2);
}

.c0::after {
  background: var(--red2);
}

<button
  class="c0"
  type="button"
/>
`;
